crates/moss-typegen/tests/snapshots/codegen__openapi_petstore_typescript.snap
---
source: crates/moss-typegen/tests/codegen.rs
assertion_line: 258
expression: output
---
// Auto-generated by moss-typegen

/** Request to create a new pet */
export interface CreatePetRequest {
  age?: number;
  name: string;
  species: Species;
}

/** A pet in the store */
export interface Pet {
  /** Age in years */
  age?: number;
  /** Unique identifier */
  id: string;
  /** Pet's name */
  name: string;
  species: Species;
  tags?: string[];
}

/** Type of animal */
export type Species =
  | "dog"
  | "cat"
  | "bird"
  | "fish"
  | "other";
