crates/moss-typegen/tests/snapshots/codegen__typescript_types_readonly.snap
---
source: crates/moss-typegen/tests/codegen.rs
assertion_line: 45
expression: output
---
// Auto-generated by moss-typegen

/** Physical address */
export interface Address {
  readonly city: string;
  readonly country: string;
  readonly postalCode?: string;
  readonly street: string;
}

/** User account status */
export type Status =
  | "pending"
  | "active"
  | "suspended"
  | "deleted";

/** A user account */
export interface User {
  readonly address?: Address;
  readonly age?: number;
  /** Email address */
  readonly email: string;
  /** Unique identifier */
  readonly id: string;
  readonly metadata?: Record<string, string>;
  readonly name?: string;
  readonly status: Status;
  readonly tags?: string[];
}
