crates/moss-typegen/tests/snapshots/codegen__typescript_types_user.snap
---
source: crates/moss-typegen/tests/codegen.rs
assertion_line: 29
expression: output
---
// Auto-generated by moss-typegen

/** Physical address */
export interface Address {
  city: string;
  country: string;
  postalCode?: string;
  street: string;
}

/** User account status */
export type Status =
  | "pending"
  | "active"
  | "suspended"
  | "deleted";

/** A user account */
export interface User {
  address?: Address;
  age?: number;
  /** Email address */
  email: string;
  /** Unique identifier */
  id: string;
  metadata?: Record<string, string>;
  name?: string;
  status: Status;
  tags?: string[];
}
